Navbar for Admin implemented

--- a/src/main/frontend/src/css/NavigationBar.scss
+++ b/src/main/frontend/src/css/NavigationBar.scss
@@ -2,3 +2,12 @@
   color: var(--white);
   background: var(--dark);
 }
+
+.dropdown-menu.show .dropdown-item {
+  font-size: 1.1rem;
+}
+
+.main-navbar.navbar-light .navbar-nav .nav-link {
+  color: var(--white);
+  font-size: 1.2rem;
+}
