--- a/src/main/frontend/src/components/utils/notifications/NotificationWrapper.scss
+++ b/src/main/frontend/src/components/utils/notifications/NotificationWrapper.scss
@@ -17,6 +17,7 @@
   .alert {
     padding-right: 2rem;
     position: relative;
+    font-size: 1.1rem;
 
     & > button {
       font-size: 1.5rem;
