--- a/src/main/frontend/src/App.scss
+++ b/src/main/frontend/src/App.scss
@@ -12,6 +12,13 @@
   color: rgb(24, 26, 27);
 }
 
+.footer {
+  background-color: rgb(15, 15, 15);
+  color: rgb(255, 255, 255);
+  font-size: 1.1rem;
+  bottom: 0;
+}
+
 body.modal-open {
   padding: 0 !important;
   overflow-y: auto !important;
@@ -29,7 +36,6 @@ body.modal-open {
 .overflow-x-hidden {
   overflow-x: hidden;
 }
-
 
 .homeGrid {
   display: grid;
