--- a/src/main/frontend/src/App.scss
+++ b/src/main/frontend/src/App.scss
@@ -15,7 +15,8 @@
 .footer {
   background-color: rgb(15, 15, 15);
   color: rgb(255, 255, 255);
-  font-size: 1.1rem;
+  font-size: 1.2rem;
+  min-height: 45px;
   bottom: 0;
 }
 
