Generate report implemented, other minor changes

--- a/src/main/frontend/src/App.scss
+++ b/src/main/frontend/src/App.scss
@@ -91,3 +91,8 @@ body.modal-open {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.date-picker-custom {
+  margin-top: 1rem;
+  margin-inline: 2rem;
+}
